--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,11 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile("org.springframework.boot:spring-boot-starter-web")
     testCompile("junit:junit")
+	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+	compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.0'
+	
     compile 'commons-logging:commons-logging:1.1.3'
     compile fileTree(dir: 'lib', include: '*.jar',exclude:'jsp-api.jar,servlet-api.jar,commons-logging-1.1.1.jar')
 }
