--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,25 @@
 *.project
 *.ipr
 *.jar
+/build/
+/bin/
+target/
 build/*
+.DS_Store 
+*.class
 
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+/src/main/resources/rebel.xml
