--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.0'
     compile 'commons-logging:commons-logging:1.1.3'
     compile fileTree(dir: 'lib', include: '*.jar',exclude:'jsp-api.jar,servlet-api.jar,commons-logging-1.1.1.jar')
+    compile 'org.codehaus.jackson:jackson-mapper-lgpl:1.9.13'
+    compile 'com.googlecode.json-simple:json-simple:1.1'
 }
 
 task wrapper(type: Wrapper) {
