--- a/collector/build.gradle
+++ b/collector/build.gradle
@@ -10,10 +10,9 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'spring-boot'
 
 jar {
-    baseName = 'azvasa'
+    baseName = 'collector'
     version =  '1.0'
 }
 
@@ -22,17 +21,7 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    testCompile("junit:junit")
-	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-	compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.0'
-	compile("org.springframework.boot:spring-boot-starter-jdbc")
-    compile 'mysql:mysql-connector-java:5.1.9'
-    compile 'org.apache.commons:commons-dbcp2:2.0'
-    compile 'commons-logging:commons-logging:1.1.3'
     compile fileTree(dir: 'lib', include: '*.jar',exclude:'jsp-api.jar,servlet-api.jar,commons-logging-1.1.1.jar')
-    compile 'org.codehaus.jackson:jackson-mapper-lgpl:1.9.13'
-    compile 'com.googlecode.json-simple:json-simple:1.1'
 }
 
 task wrapper(type: Wrapper) {
