--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile fileTree(dir: 'lib', include: '*.jar',exclude:'jsp-api.jar,servlet-api.jar,commons-logging-1.1.1.jar')
     compile 'org.codehaus.jackson:jackson-mapper-lgpl:1.9.13'
     compile 'com.googlecode.json-simple:json-simple:1.1'
+    compile 'org.elasticsearch:elasticsearch:1.4.2'
 }
 
 task wrapper(type: Wrapper) {
