--- a/collector/build.gradle
+++ b/collector/build.gradle
@@ -1,22 +1,15 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.2.RELEASE")
-    }
-}
-
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 
-jar {
-    baseName = 'collector'
-    version =  '1.0'
+task fatJar(type: Jar) {
+    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.MF'
     manifest {
-        attributes 'Main-Class': 'com.azvasa.CollectorMain'
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Main-Class': 'com.azvasa.CollectorMain'
     }
+    baseName = 'collector'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } } with jar
 }
 
 repositories {
@@ -25,8 +18,4 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'lib', include: '*.jar',exclude:'jsp-api.jar,servlet-api.jar,commons-logging-1.1.1.jar')
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.11'
 }
