--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'org.codehaus.jackson:jackson-mapper-lgpl:1.9.13'
     compile 'com.googlecode.json-simple:json-simple:1.1'
     compile 'org.elasticsearch:elasticsearch:1.4.2'
+    compile 'com.sendgrid:sendgrid-java:2.1.1'
 }
 
 task wrapper(type: Wrapper) {
