log stash updated

--- a/logstash_config/vm_stats_logstash.conf
+++ b/logstash_config/vm_stats_logstash.conf
@@ -7,7 +7,7 @@ input {
 
 filter {
   grok {
-	match => {"message" => "%{TIMESTAMP_ISO8601:timestamp} %{USER:type} %{USER:name} %{NUMBER:cpu_usage_none} %{NUMBER:cpu_usage_average} %{NUMBER:cpu_usage_min} %{NUMBER:cpu_usage_max} %{NUMBER:mem_usage_none} %{NUMBER:mem_usage_average} %{NUMBER:mem_usage_min} %{NUMBER:mem_usage_max} %{NUMBER:disk_usage_none} %{NUMBER:disk_usage_average} %{NUMBER:disk_usage_min} %{NUMBER:disk_usage_max} %{NUMBER:net_usage_none} %{NUMBER:net_usage_average} %{NUMBER:net_usage_min} %{NUMBER:net_usage_max} %{NUMBER:sys.heartbeat_summation}"}  
+	match => {"message" => "%{TIMESTAMP_ISO8601:timestamp} %{USER:type} %{USER:name} %{NUMBER:cpu_usage_none:int} %{NUMBER:cpu_usage_average:int} %{NUMBER:cpu_usage_min:int} %{NUMBER:cpu_usage_max:int} %{NUMBER:mem_usage_none:int} %{NUMBER:mem_usage_average:int} %{NUMBER:mem_usage_min:int} %{NUMBER:mem_usage_max:int} %{NUMBER:disk_usage_none:int} %{NUMBER:disk_usage_average:int} %{NUMBER:disk_usage_min:int} %{NUMBER:disk_usage_max:int} %{NUMBER:net_usage_none:int} %{NUMBER:net_usage_average:int} %{NUMBER:net_usage_min:int} %{NUMBER:net_usage_max:int} %{NUMBER:sys.heartbeat_summation:int}"}  
 }
 }
 output {
