--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.0'
 	compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile 'mysql:mysql-connector-java:5.1.9'
+    compile 'org.elasticsearch:elasticsearch:1.4.4'
     compile 'org.apache.commons:commons-dbcp2:2.0'
     compile 'commons-logging:commons-logging:1.1.3'
     compile fileTree(dir: 'lib', include: '*.jar',exclude:'jsp-api.jar,servlet-api.jar,commons-logging-1.1.1.jar')
